envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000

node:
  cluster: service_greeter
  id: test-id

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                      path: "/dev/stdout"
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/quote" }
                          route:
                            host_rewrite_literal: localhost
                            cluster: service_quote
                            prefix_rewrite: "/"
                      rate_limits:
                        - actions:
                            - header_value_match:
                                descriptor_value: quote-path-auth
                                expect_match: false
                                headers:
                                  - name: ":path"
                                    exact_match: "/quote"
                                  - name: "Authorization"
                          stage: 0
                        - actions:
                            - header_value_match:
                                descriptor_value: quote-path-user-limit
                                headers:
                                  - name: ":path"
                                    exact_match: "/quote"
                            - request_headers:
                                header_name: "Authorization"
                                descriptor_key: auth_token
                          stage: 1
                        - actions:
                            - header_value_match:
                                descriptor_value: quote-path-vip
                                headers:
                                  - name: ":path"
                                    exact_match: "/quote"
                            - request_headers:
                                header_name: "x-service-level"
                                descriptor_key: service-level
                          stage: 1
                http_filters:
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: apis
                      stage: 0
                      request_type: external
                      failure_mode_deny: true
                      rate_limit_service:
                        transport_api_version: V3
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: apis
                      stage: 1
                      request_type: external
                      failure_mode_deny: true
                      rate_limit_service:
                        transport_api_version: V3
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                  - name: envoy.filters.http.router

  clusters:
    - name: service_quote
      connect_timeout: 2s
      type: strict_dns
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_quote
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.host.internal
                      port_value: 6080
    - name: ratelimit
      type: strict_dns
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ratelimit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.host.internal
                      port_value: 9081
      http2_protocol_options: {}
